[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-to-md"
version = "6.0.0"
description = "Feishu document to Obsidian-ready Markdown converter"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
cookie = [
    "cryptography>=38.0",
    "pywin32>=306; sys_platform == ''win32''",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
feishu-to-md = "feishu_to_md.converter:main"
